test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/sub_ptr_from_int.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CBinary: 
                    CSubtract: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
